--- a/src/components/NavLinks.module.css
+++ b/src/components/NavLinks.module.css
@@ -1,3 +1,18 @@
+.NavLinks {
+  width: 100%;
+  max-width: 80ch;
+  overflow-x: auto;
+  margin: 0 auto;
+  padding: var(--ds-space-4) 0;
+  display: flex;
+  gap: var(--ds-space-4);
+  position: sticky;
+  top: 0;
+  background-color: var(--ds-bg-page);
+  z-index: 100;
+  box-shadow: 0 0 20px 20px var(--ds-bg-page);
+}
+
 .NavLink {
   position: relative;
 }
